--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Issuance</title>
+    <title>Dr. Stefan Pfeiffer</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,10 +23,10 @@
         return html`
           <div className="header">
             <h1 className="title">
-              <a href="index.html"><strong>issuance</strong></a>
+              <a href="index.html"><strong>Dr. Stefan Pfeiffer</strong></a>
             </h1>
             <p className="description">
-              Open, free blogging on <strong>Github pages</strong> with <strong>Github issues</strong>.
+              <strong>Clojure</strong> and other strange addictions
             </p>
           </div>
         `;
@@ -121,11 +121,11 @@
           <${Header} />
           <${Posts} />
         `,
-        document.querySelector('#issuance')
+        document.querySelector('#content')
       )
     </script>
   </head>
   <body>
-    <div id="issuance" />
+    <div id="content" />
   </body>
 </html>
