--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             if (!issues) {
               const { url, ...options } = endpoint("GET /repos/:owner/:repo/issues", {
                 owner: "dl1ely",
-                repo: "issuance",
+                repo: "dl1ely.github.io",
                 auth: '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'
               });
               const res = await fetch(url, options);
