--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="index.html"><strong>Dr. Stefan Pfeiffer</strong></a>
             </h1>
             <p className="description">
-              <strong>Clojure</strong> and other strange addictions
+              <strong>Clojure</strong>, <strong>esoteric keyboard mappings</strong> and other strange addictions
             </p>
           </div>
         `;
